--- a/3_class/glasn.html
+++ b/3_class/glasn.html
@@ -19,7 +19,7 @@
     function vowelCount(str) {
         let count = 0;
         for(let i = 0; i < str.length; i++){
-            if(str[i].toLowerCase() === 'a' || str[i].toLowerCase() === 'i' || str[i].toLowerCase() === 'o' ||str[i].toLowerCase() === 'e' ||str[i].toLowerCase() === 'u'){
+            if(str[i].toLowerCase() === 'а' || str[i].toLowerCase() === 'у' || str[i].toLowerCase() === 'о' ||str[i].toLowerCase() === 'е' ||str[i].toLowerCase() === 'и' ||str[i].toLowerCase() === 'я' ||str[i].toLowerCase() === 'ю' ||str[i].toLowerCase() === 'ё' ||str[i].toLowerCase() === 'э' ||str[i].toLowerCase() === 'ы'){
                 count++;
             }
         }
