--- a/6_save/clockSvg.html
+++ b/6_save/clockSvg.html
@@ -16,13 +16,13 @@
 </head>
 <body>
 <svg width="200" height="200">
-    <circle cx="100" cy="100" r="100" fill="orange" />
+    <circle cx="100" cy="100" r="100" fill="orange"></circle>
     <g id="circle"></g>
     <use xlink:href="#circle"></use>
     <g id="hands">
-        <rect id="hour" x="98.5" y="52.5" width="5" height="50" rx="2.5" ry="2.55" />
-        <rect id="min" x="98" y="12.5" width="3" height="90" rx="2" ry="2"/>
-        <line id="sec" x1="100" y1="100" x2="100" y2="20" />
+        <rect id="hour" x="98.5" y="52.5" width="5" height="50" rx="2.5" ry="2.55"></rect>
+        <rect id="min" x="98" y="12.5" width="3" height="90" rx="2" ry="2"></rect>
+        <line id="sec" x1="100" y1="100" x2="100" y2="20"></line>
     </g>
 </svg>
 <script>
@@ -30,11 +30,12 @@
         function r(el, deg) {
             el.setAttribute('transform', 'rotate('+ deg +' 100 100)')
         }
-        var d = new Date();
+
+        const d = new Date();
         r(sec, 6*d.getSeconds());
         r(min, 6*d.getMinutes());
         r(hour, 30*(d.getHours()%12) + d.getMinutes()/2);
-    }, 1000)
+    }, 1000);
     function createCircle() {
         let circleGroup = document.querySelector('#circle');
         for (let i = 1, deg = 30; i <= 12; i++, deg += 30) {
