--- a/7_MVC/CLOCK/clock.html
+++ b/7_MVC/CLOCK/clock.html
@@ -8,15 +8,20 @@
     <script src="TClock.js"></script>
     <script src="TClockViewSVG.js"></script>
     <script src="TClockViewDOM.js"></script>
+    <script src="TClockViewCANVAS.js"></script>
     <script src="TClockControllerButtons.js"></script>
     <script>
-        const model = new TClock(0);
-        const view = new TClockViewSVG(document.body);
-        new TClockControllerButtons(model, view);
+        const model1 = new TClock(0);
+        const view1 = new TClockViewSVG(document.body);
+        new TClockControllerButtons(model1, view1);
 
         const model2 = new TClock(3);
         const view2 = new TClockViewDOM(document.body);
         new TClockControllerButtons(model2, view2);
+
+        const model3 = new TClock(6);
+        const view3 = new TClockViewCANVAS(document.body);
+        new TClockControllerButtons(model3, view3);
     </script>
 </body>
 </html>
